<resources>
    <string name="app_name">Game Centre</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_display_message">Display Message</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="pref_title_sync_frequency" />
    <string name="pref_title_system_sync_settings" />
    <string name="pref_description_social_recommendations" />
    <string name="pref_title_social_recommendations" />
    <string name="pref_default_display_name" />
    <string name="pref_title_display_name" />
    <string name="pref_title_add_friends_to_messages" />
    <string name="pref_header_general" />
    <string name="pref_header_notifications" />
    <string name="pref_header_data_sync" />
    <string name="pref_title_new_message_notifications" />
    <string name="pref_title_ringtone" />
    <string name="pref_title_vibrate" />
    <string name="game_of_slidingtiles">Game of slidingtiles</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="sign_out">Sign Out</string>
    <string name="_123">123</string>
    <string name="undo">Undo</string>
    <string name="save_amp_leave"><![CDATA[Save & Leave]]></string>
    <string name="sliding_tiles_description">Welcome To Sliding Tiles   A Puzzle Game where you must arrange the numbers in the correct order</string>
    <string name="new_game">New Game</string>
    <string name="load_saved_game">Load Saved Game</string>
    <string name="save_game">Save Game</string>
    <string name="sliding_tiles_scoreboard">Sliding Tiles Scoreboard</string>
    <string name="back">BACK</string>
    <string name="undo_step">Undo Step</string>
    <string name="game_complexity">Game Complexity</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter">Enter</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="reenter_your_password">Reenter your password</string>
    <string name="score">Score</string>
    <string name="description">Description</string>
    <string name="ranking">Ranking</string>
    <string name="Password" />
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>
